# web3-research-agent

./: .env.example  .gitignore  CHART_DEBUG_COMPLETE.md  Dockerfile  IMPORT_FIXES.md  IMPROVEMENTS_SUMMARY.md  README.md  README_old.md  app.py  app_config.yaml  app_fastapi.py  debug_gemini.py  dev_check.sh  minimal_test.py  pyproject.toml  requirements.txt  run.py  test_app.py  test_chart_tool.py  test_complete_pipeline.py  test_response_clean.py  test_suite.py  test_tool_selection.py  validate_startup.py  version.py
attached_assets/: Pasted--Complete-Web3-Research-Co-Pilot-Project-Plan-Structure-Project-Directory-Structure--1754811430335_1754811430338.txt
src/: api_clients.py  cache_manager.py  config.py  defillama_client.py  enhanced_agent.py  news_aggregator.py  portfolio_analyzer.py  research_agent.py  visualizations.py
src/agent/: memory_manager.py  query_planner.py  research_agent.py  response_formatter.py
src/api/: airaa_integration.py
src/tools/: base_tool.py  chart_creator_tool.py  chart_data_tool.py  coingecko_tool.py  cryptocompare_tool.py  defillama_tool.py  etherscan_tool.py
src/utils/: ai_safety.py  cache_manager.py  config.py  exceptions.py  logger.py
static/: app.js  styles.css
templates/: index.html
